# saebooks-web

./: .dockerignore  .gitignore  .venv  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  babel.cfg  conftest.py  pyproject.toml  saebooks-review-ui-tiers-engine-spec.md  tailwind.config.js
assets/: tailwind.css
i18n/: backtranslation-qa.json  messages.pot
saebooks_web/: api_client.py  archive_helpers.py  auth.py  authentik_sso.py  bad_debt_logic.py  brand.py  cf_access.py  comms.py  company_context.py  config.py  discourse_sso.py  eid_links.py  eid_providers.py  eid_sso.py  features.py  form_helpers.py  invoice_pdf_ee.py  jurisdiction_gate.py  jurisdiction_presentation.py  main.py  module_gate.py  module_registry.py  period.py  render.py  webauthn_sso.py
scripts/: auto_write_off.py  build_css.sh  eid_demo_live_check.py
static/: manifest.webmanifest  sae-tokens.css
templates/: _funnel_macros.html  _icons.html  _pagination_macros.html  _sort_macros.html  _status_macros.html  base.html  dashboard.html  demo_isolation.html
tests/: _eid_certs.py  _jp.py  test_account_ranges_web.py  test_accounts.py  test_accounts_archive.py  test_accounts_create.py  test_accounts_edit.py  test_admin_audit_log_web.py  test_admin_routes_gated_web.py  test_admin_sql_tool_web.py  test_ai_extraction_web.py  test_ato_sbr_web.py  test_attachments_web.py  test_auth.py  test_auto_write_off.py  test_bad_debt_recovery_web.py  test_bad_debts_web.py  test_bank_accounts_web.py  test_bank_accounts_write.py  test_bank_rules_web.py  test_bank_statement_lines_web.py  (+133 more)
(+737 files in other folders)
