[project]
name = "saebooks-web"
version = "0.2"
description = "SAE Books web frontend — thin Jinja2 + HTMX client for saebooks-api"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Richard Sauer", email = "richard@sauer.com.au" }]
dependencies = [
    "fastapi>=0.115",
    "starlette>=1.0.1",
    "jinja2>=3.1",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.27",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "pyjwt[crypto]>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "respx>=0.22",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saebooks_web"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
